# small-biz-operations-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_session.py  pyproject.toml  render.yaml
small_biz_ops_mcp/: __init__.py  __main__.py  analytics.py  demo_seed.py  finance_paths.py  server.py  store.py
small_biz_ops_mcp/sample_data/: cost_of_goods_monthly.csv  daily_sales.csv  delivery_sales.csv  inventory_purchases.csv  payroll_monthly.csv  rent_monthly.csv  utilities_monthly.csv
small_biz_ops_mcp/web/: __init__.py  __main__.py  demo_mode.py  starlette_app.py
small_biz_ops_mcp/web/static/: app.css  app.js  index.html
