[project]
name = "small-biz-ops-mcp"
version = "0.1.0"
description = "MCP server for small business operations: tasks, expenses, customers, inventory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.0",
]

[project.scripts]
small-biz-ops-mcp = "small_biz_ops_mcp.server:main"
small-biz-ops-ui = "small_biz_ops_mcp.web.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["small_biz_ops_mcp"]
